--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.mustache.check-template-location = false
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
 vaadin.pnpm.enable=false
+
+#JDBC
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.url=
+
+#JPA
